--- a/src/index.css
+++ b/src/index.css
@@ -128,3 +128,11 @@ body {
 .skip-link:focus {
   left: 10px;
 }
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.hide-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
